Prevent horizontal overflow on page text

--- a/app/assets/stylesheets/application/_document.scss
+++ b/app/assets/stylesheets/application/_document.scss
@@ -244,6 +244,7 @@
     padding-right:20px;
     color:$ss-color-content;
     position:relative;
+    word-break:break-word;
   }
 
   p, ul, ol {
